# vbg-gn

./: .env  .gitignore  README.md  api.py  app.py  config.py  database.py  init_db.sql  models.py  pyproject.toml  requirements.txt  seed_data.py  vbg_guinee.db
assets/: custom.css
docs/: Documentation_techniques.md  documentation_fonctionnelle.md
pages/: connexion.py  contact_victime.py  dashboard.py  declarations.py  home.py  submit_case.py
services/: cases_service.py  stats_service.py
